--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <!-- Metadata -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Vikram Sreedhar" />
-    <meta name="description" content="The land management industry is certainly not new and groundbreaking on its own. Many companies already exist and offer solutions to companies for their daily land management issues. However, these companies employ their own methods of data management which happen to be very costly. At IRI we have developed a proprietary system that a" />
-    <meta name="keywords" content="Matthew Sweitzer, IRI Land, Integrated Resource Innovations LLC, land management industry, land algorithms, mining, real estate, Alex Harvey,Josh McKenzie" />
+    <meta name="author" content="Vikram Sreedhar, James Uejio, Eric Huynh, Thomas Pan" />
+    <meta name="description" content="Cal Hacks 2.0 2015 Hackathon Project. You can upload your hot fire mixtape and it will drop a fire near your location. People can then like and dislike and your fire radius will expand." />
+    <meta name="keywords" content="Vikram Sreedhar, James Uejio, Eric Huynh, Thomas Pan, Soundfyre, Music, Drop Mix, Fire, Hot, Cal Hacks 2.0, Hackathon" />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
