--- a/index.html
+++ b/index.html
@@ -123,7 +123,16 @@
      </div>
      <div class="row">
  </form>
+<h3>Fill in the fields below, choose an audio file, and hit submit to share your track with your local area! You can like or dislike the song to change the radius of fire.</h3>
+<script>
+ (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+ })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+ ga('create', 'UA-68674749-1', 'auto');
+ ga('send', 'pageview');
 
+</script>
 </body>
 </html>
