--- a/index.html
+++ b/index.html
@@ -111,19 +111,20 @@
       <div class="col-md-4">
          <text id="Song">Song Name: <input id = "songname" name = "name" type="text" size= "20"/></text>
        </div>
-         <div class="col-md-2">
+         <div class="col-md-4">
          <text>Artist: <input id = "artistname" name = "artist" type="text" size= "20"/></text>
          </div>
-         <div class="col-md-2">
+         <div class="col-md-4">
         <input type="file" name="song" id="audio">
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
        <button id="submit">Submit</button>
        </div>
      </div>
      <div class="row">
  </form>
-<h3>Fill in the fields below, choose an audio file, and hit submit to share your track with your local area! You can like or dislike the song to change the radius of fire.</h3>
+<h3 style = "margin-left:10%;margin-right:10%" align = "center">Fill in the fields below, choose an <strong>ORIGINAL HOT FIRE</strong> audio file, and hit submit to share your track with your local area! You can like or dislike the song to change the radius of fire.</h3>
+<br>
 <script>
  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
