--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
      </div>
      <div class="row">
  </form>
-<h3 style = "margin-left:10%;margin-right:10%" align = "center">Fill in the fields below, choose an <strong>ORIGINAL HOT FIRE</strong> audio file, and hit submit to share your track with your local area! You can like or dislike the song to change the radius of fire.</h3>
+<h3 style = "margin-left:10%;margin-right:10%" align = "center">Fill in the fields below, choose an <strong>ORIGINAL HOT FIRE</strong> (pls no copyright, remix OK) audio file, and hit submit to share your track with your local area! You can like or dislike the song to change the radius of fire.</h3>
 <h3 style = "margin-left:10%;margin-right:10%" align = "center">Built by James Uejio, Vikram Sreedhar, Eric Huynh, Thomas Pan at Cal Hacks 2.0. Contact us at soundfyre2.0@gmail.com</h3>
 <br>
 <script>
