--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <meta name="description" content="Cal Hacks 2.0 2015 Hackathon Project. You can upload your hot fire mixtape and it will drop a fire near your location. People can then like and dislike and your fire radius will expand." />
     <meta name="keywords" content="Vikram Sreedhar, James Uejio, Eric Huynh, Thomas Pan, Soundfyre, Music, Drop Mix, Fire, Hot, Cal Hacks 2.0, Hackathon" />
 
+    <!--Favicon -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" type="text/css" />
