--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Vikram Sreedhar, James Uejio, Eric Huynh, Thomas Pan" />
     <meta name="description" content="Cal Hacks 2.0 2015 Hackathon Project. You can upload your hot fire mixtape and it will drop a fire near your location. People can then like and dislike and your fire radius will expand." />
-    <meta name="keywords" content="Vikram Sreedhar, James Uejio, Eric Huynh, Thomas Pan, Soundfyre, Music, Drop Mix, Fire, Hot, Cal Hacks 2.0, Hackathon" />
 
     <!--Favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -23,9 +22,11 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/parse.js"></script>
-    <script src="js/map.js" type="text/javascript"></script>
-    <script async defer src="js/googlemapsapi.js"></script>
+    <meta http-equiv="refresh" content="0; url=http://soundfyre.net" />
 </head>
+<script>
+  window.location.href = "http://soundfyre.net"
+</script>
 <body id="background">
 
   <div class="container-fluid">
@@ -102,8 +103,7 @@
   
 </div></div>
 </div>
-          <div class="contain-fire">
-
+        <div class="contain-fire">
         </div>
 
   <div id="map"></div>
@@ -131,15 +131,6 @@
 <h3 style = "margin-left:10%;margin-right:10%" align = "center">Built by <a href = "http://jamesuejio.com/">James Uejio</a>, <a href = "http://vikramsreedhar.com/">Vikram Sreedhar</a>, <a href = "http://erichuynhing.com/">Eric Huynh</a>, Thomas Pan at Cal Hacks 2.0. Contact us at soundfyre2.0@gmail.com</h3>
 <p style = "margin-left:10%;margin-right:10%" align = "center"><strong>Note:</strong> We have switched the default map to satellite view due to the Google Maps API failing to load the normal map type. We will debug this issue soon.</p>
 <br>
-<script>
- (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
- (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
- m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
- })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
- ga('create', 'UA-68674749-1', 'auto');
- ga('send', 'pageview');
-
-</script>
 </body>
 </html>
